# rs3cache

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MANIFEST.in.txt  README.md  config.toml  crates.js  help.html  index.html  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  setup.py  source-files.js
.github/workflows/: ci.yml  docs.yml  python.yml  rust.yml  tests.yml
benches/: bench.rs  my_benchmark.rs
implementors/error/: trait.With.js
implementors/structopt/: trait.StructOpt.js
macro_utils/: Cargo.toml
macro_utils/src/: lib.rs
osrs_py/: Cargo.toml  requirements-dev.txt  rust-toolchain.toml  setup.py
osrs_py/examples/: example.py  example_traverse_all_mapsquares.py  file_versions.py  test_errors.py  timboooo.py
osrs_py/osrs/: __init__.py  example.py  file_dates.py
osrs_py/rs3/: timboooo.py  (+1 more)
raw/: README.txt
rs3/: all.html  fn.PyInit_rs3.html  fn.main.html  index.html  sidebar-items.js
rs3_py/: .gitignore  Cargo.toml  config.toml  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  rust-toolchain.toml  setup.py
rs3cache/: __init__.py  all.html  example.py  example_traverse_all_mapsquares.py  file_dates.py  index.html  sidebar-items.js  timboooo.py
rs3cache_backend/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js
rs3cache_backend/arc/: index.html  sidebar-items.js  struct.Archive.html
rs3cache_backend/buf/: enum.JStringKind.html  enum.ReadError.html  enum.ReadErrorKind.html  index.html  sidebar-items.js  struct.Eof.html  struct.FileSeek.html  struct.JString.html  struct.NotExhausted.html  struct.NotNulTerminated.html  struct.OpcodeNotImplemented.html  struct.ReadError.html  struct.WithInfo.html  trait.BufExtra.html
rs3cache_backend/decoder/: enum.DecodeError.html  fn.decompress.html  index.html  sidebar-items.js  struct.BZip2.html  struct.Compression.html  struct.Empty.html  struct.Gzip.html  struct.Unimplemented.html  struct.Zlib.html
rs3cache_backend/error/: constant.STRUCTURE.html  enum.CacheError.html  enum.CacheErrorKind.html  index.html  sidebar-items.js  struct.CacheError.html  struct.CannotOpen.html  struct.Decode.html  struct.Decompression.html  struct.Integrity.html  struct.Io.html  struct.JsonEncode.html  struct.LocationHelp.html  struct.Read.html  struct.Xtea.html  struct.XteaLoad.html  type.CacheResult.html
rs3cache_backend/error/py_error_impl/: index.html  sidebar-items.js  struct.ArchiveNotFoundError.html  struct.CacheNotFoundError.html  struct.FileMissingError.html
rs3cache_backend/hash/: fn.hash_djb2.html  index.html  sidebar-items.js
rs3cache_backend/index/: constant.STRUCTURE.html  enum.CachePath.html  enum.IntegrityError.html  fn.assert_coherence.html  index.html  sidebar-items.js  struct.ArchiveMissing.html  struct.ArchiveMissingNamed.html  struct.Blank.html  struct.CacheIndex.html  struct.CannotOpen.html  struct.Corrupted.html  struct.Crc.html  struct.FileMissing.html  struct.FileMissingNamed.html  struct.Initial.html  struct.IntoIter.html  struct.LocationHelp.html  struct.Other.html  struct.Truncated.html  struct.Version.html  trait.IndexState.html
rs3cache_backend/index/index_impl/: fn.assert_coherence.html
rs3cache_backend/index/states/: struct.Initial.html  struct.Truncated.html  trait.IndexState.html
rs3cache_backend/meta/: fn.bytes_to_vec.html  index.html  sidebar-items.js  struct.IndexMetadata.html  struct.Metadata.html
rs3cache_backend/path/: constant.INPUT.html  enum.CachePath.html  index.html  sidebar-items.js  struct.LocationHelp.html
rs3cache_backend/src/: arc.rs  buf.rs  decoder.rs  error.rs  index.rs  lib.rs  meta.rs  path.rs  xtea.rs
rs3cache_backend/src/index/: dat.rs  dat2.rs  sqlite.rs
rs3cache_core/: Cargo.toml  all.html  index.html  sidebar-items.js
rs3cache_core/arc/: index.html  sidebar-items.js  struct.Archive.html  struct.ArchiveGroup.html
rs3cache_core/buf/: enum.ReadErrorKind.html  index.html  sidebar-items.js  struct.Buffer.html  struct.ReadError.html  trait.BufExtra.html
rs3cache_core/decoder/: enum.DecodeError.html  fn.decompress.html  index.html  sidebar-items.js  struct.Compression.html
rs3cache_core/error/: enum.CacheError.html  index.html  sidebar-items.js  type.CacheResult.html
rs3cache_core/hash/: fn.hash_djb2.html  index.html  sidebar-items.js
rs3cache_core/index/: fn.assert_coherence.html  index.html  sidebar-items.js  struct.CacheIndex.html  struct.Initial.html  struct.IntoIter.html  struct.IntoIterGrouped.html  struct.Truncated.html  trait.IndexState.html
rs3cache_core/index/index_impl/: fn.assert_coherence.html
rs3cache_core/index/states/: struct.Initial.html  struct.Truncated.html  trait.IndexState.html
rs3cache_core/indextype/: index.html  sidebar-items.js  struct.ConfigType.html  struct.IndexType.html  struct.MapFileType.html
rs3cache_core/meta/: fn.bytes_to_vec.html  index.html  sidebar-items.js  struct.IndexMetadata.html  struct.Metadata.html
rs3cache_core/src/: arc.rs  buf.rs  decoder.rs  error.rs  hash.rs  index.rs  indextype.rs  lib.rs  meta.rs  xtea.rs
rs3cache_core/src/index/: dat.rs  dat2.rs  legacy.rs  osrs.rs  rs3.rs
rs3cache_macros/: Cargo.toml  all.html  attr.pyo3_get_all.html  index.html  sidebar-items.js
rs3cache_utils/: Cargo.toml  all.html  index.html  sidebar-items.js
rs3cache_utils/adapters/: index.html  sidebar-items.js  struct.Accumulate.html  struct.Pairwise.html  trait.Accumulator.html  trait.Pairwisor.html
rs3cache_utils/bar/: index.html  sidebar-items.js  struct.RenderBar.html  trait.Render.html
rs3cache_utils/color/: index.html  sidebar-items.js  struct.Color.html
rs3cache_utils/lazy/: index.html  sidebar-items.js  struct.Lazy.html
rs3cache_utils/par/: index.html  sidebar-items.js  trait.ParApply.html
rs3cache_utils/rangeclamp/: index.html  sidebar-items.js  trait.RangeClamp.html
rs3cache_utils/slice/: index.html  sidebar-items.js  struct.SharedSlice.html
rs3cache_utils/src/: bar.rs  color.rs  error.rs  lazy.rs  lib.rs  rangeclamp.rs  slice.rs
src/: cli.rs  cli.yml  impl_.rs  lib.rs  main.rs  sandbox.rs
viewer/: viewer.html
xtask/: Cargo.toml
(+1272 files in other folders)
