[package]
name = "rs3cache"
version = "0.1.0"
authors = ["mejrs"]
edition = "2021"
default-run = "rs3cache"

[workspace]
members = [
    "rs3cache_core",
    "rs3cache_macros",
    "rs3cache_utils",
    "rs3_py",
    "osrs_py",
    "xtask"
]

[profile.release]
lto = "thin"

[lib]
name = "rs3cache"
# dual types make it work both for compiling as package and python lib
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rs3cache"
path = "src/main.rs"
required-features = ["rs3"]

[[bin]]
name = "osrscache"
path = "src/main.rs"
required-features = ["osrs"]

[[bin]]
name = "legacy"
path = "src/main.rs"
required-features = ["legacy"]

[dependencies]
rs3cache_macros = { path = "rs3cache_macros", version = "0.1.0", optional = true  }
rs3cache_core = { path = "rs3cache_core", version = "0.1.0" }
rs3cache_utils = { path = "rs3cache_utils", version = "0.1.0" }
xtask = { path = "xtask", version = "0.1.0" }
itertools = "0.10.1"
ndarray = {version = "0.15.3", features = ["serde"] }
image = "0.23.14"
regex = "1.5.4"
futures = "0.3.17"
async-std = "1.10.0"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.10.0"
pyo3 = { version = "0.15", features = ["extension-module", "multiple-pymethods"], optional = true }
structopt = "0.3.23"
indicatif = "0.16.2"
path_macro = "1.0.0"
fstrings = "0.2.3"
filetime = { version = "0.2.15", optional = true }
rayon = "1.5.1"
bytes = "1.1.0"

[features]
python = ["pyo3", "rs3cache_core/python", "rs3cache_macros"]
mockdata = ["rs3cache_core/mockdata"]
fast = []
rs3 = ["rs3cache_core/sqlite", "filetime"]
osrs = ["rs3cache_core/dat2"]
legacy = ["rs3cache_core/dat"]
2008_shim = ["osrs", "rs3cache_core/2008_shim"]
2011_shim = ["2008_shim"]

