[package]
name = "rs3cache"
version = "0.1.0"
authors = ["mejrs"]
edition = "2021"
default-run = "rs3cache"
rust-version = "1.60"

[workspace]
members = [
    "rs3cache_backend",
    "rs3cache_macros",
    "rs3cache_utils",
    "rs3_py",
    "osrs_py",
]

[profile.release]
lto = "thin"

[lib]
name = "rs3cache"
# dual types make it work both for compiling as package and python lib
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rs3cache"
path = "src/main.rs"
required-features = ["rs3"]

[[bin]]
name = "osrscache"
path = "src/main.rs"
required-features = ["osrs"]

[[bin]]
name = "legacy"
path = "src/main.rs"
required-features = ["legacy"]

[dependencies]
rs3cache_macros = { path = "rs3cache_macros", version = "0.1.0", optional = true  }
rs3cache_backend = { path = "rs3cache_backend", version = "0.1.0" }
rs3cache_utils = { path = "rs3cache_utils", version = "0.1.0" }

bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive", "env"] }
filetime = { version = "0.2.15", optional = true }
image = "0.24.1"
indicatif = "0.16.2"
itertools = "0.10.3"
ndarray = { version = "0.15.4", features = ["serde"] }
path_macro = "1.0.0"
pyo3 = { version = "0.16.1", features = ["extension-module"], optional = true }
rayon = "1.5.3"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"

[features]
pyo3 = ["dep:pyo3", "rs3cache_backend/pyo3", "rs3cache_macros"]
mockdata = ["rs3cache_backend/mockdata"]
fast = []
rs3 = ["rs3cache_backend/sqlite", "filetime"]
osrs = ["rs3cache_backend/dat2"]
legacy = ["rs3cache_backend/dat"]
2008_3_shim = ["osrs", "rs3cache_backend/2008_3_shim"]
2009_1_shim = ["2008_3_shim", "rs3cache_backend/2008_3_shim"]
2010_1_shim = ["2009_1_shim"]
2010_3_shim = ["2010_1_shim"]
2011_11_shim = ["2010_3_shim"]
2013_shim = ["2011_11_shim"]
2013_4_shim = ["2013_shim"]
