[package]
name = "rs3cache_backend"
description = "Tools and api for reading and interpreting the RuneScape 3 game cache"
version = "0.1.0"
edition = "2021"

[dependencies]
rs3cache_macros = { path = "../rs3cache_macros", version = "0.1.0" , optional = true}
rs3cache_utils = { path = "../rs3cache_utils", version = "0.1.0" }

bytes = "1.1.0"
bzip2-rs = "0.1.2"
itertools = "0.10.3"
libflate = "1.1.2"
memchr = "2.4.1"
path_macro = "1.0.0"
pyo3 = { version = "0.17.3", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = "3.0.11"

[features]
pyo3 = ["dep:pyo3", "rs3cache_macros"]
sqlite = ["rusqlite"]
dat2 = []
dat = ["pyo3"]
mockdata = []
dont_save = []
2008_3_shim = ["dat2"]
