[package]
name = "rs3cache_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rs3cache_macros = { path = "../rs3cache_macros", version = "0.1.0" }
rs3cache_utils = { path = "../rs3cache_utils", version = "0.1.0" }
sqlite = { version = "0.26.0", optional = true }
libflate = "1.1.1"
bytes = "1.1.0"
itertools = "0.10.1"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.10.0"
bzip2 = "0.4.3"
pyo3 = { version = "0.14.5", optional = true }
path_macro = "1.0.0"
fstrings = "0.2.3"

[features]
mockdata = []
save_mockdata = []
dont_save = []
fast = []
rs3 = ["sqlite", "rs3cache_utils/rs3"]
osrs = []
377 = []
