[package]
name = "rs3cache_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rs3cache_macros = { path = "../rs3cache_macros", version = "0.1.0" , optional = true}
rs3cache_utils = { path = "../rs3cache_utils", version = "0.1.0" }
sqlite = { version = "0.26.0", optional = true }
libflate = "1.1.1"
bytes = "1.1.0"
itertools = "0.10.1"
image = "0.23.14"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"]}
serde_with = "1.10.0"
bzip2-rs = "0.1.2"
pyo3 = { version = "0.15", optional = true }
path_macro = "1.0.0"
fstrings = "0.2.3"
memchr = "2.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = "3.0.10"

[features]
python = ["pyo3", "rs3cache_macros"]
dat2 = []
dat = []
mockdata = []
dont_save = []
legacy = []
2008_3_shim = ["dat2"]
