[package]
name = "rs3cache_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlite = { version = "0.26.0", optional = true }
image = "0.23.14"
num_cpus = "1.13.0"
serde_json = "1.0.67"
bzip2 = "0.4.3"
pyo3 = { version = "0.14.5", features = ["extension-module"], optional = true }
path-absolutize = "3.0.10"

[features]
rs3 = ["sqlite"]
